# wavecrate

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  MEMORY.md  README.md  bench.json  book.toml  build.rs  cliff.toml  design-qa.md  release_contract.toml  rls_cargo.toml  run.ps1  run.sh  rust-toolchain.toml
apps/installer/: Cargo.toml  build.rs
apps/installer/src/: cleanup.rs  download.rs  events.rs  install.rs  main.rs  paths.rs  registry.rs  shortcuts.rs  ui.rs
apps/installer/src/ui/: mod.rs  projection.rs  state.rs
crates/reson/: Cargo.toml
crates/reson/src/: async_decode.rs  decoder.rs  device.rs  fade.rs  lib.rs  loop_diagnostic.rs  looping.rs  mixer.rs  routing.rs  telemetry.rs  time_stretch.rs  wav_sanitize.rs
crates/reson/src/async_decode/: tests.rs
crates/reson/src/input/: enumerate.rs  mod.rs  resolve.rs  stream.rs
crates/reson/src/output/: callback.rs  discovery.rs  mod.rs  stream.rs
crates/reson/src/output/stream/: builder.rs  config.rs  handle.rs
crates/reson/src/player/: edit_fade_impl.rs  edit_fade_test.rs  helpers.rs  loop_span.rs  metronome.rs  mod.rs  playback.rs  playback_span_handle.rs  playback_span_plan.rs  progress.rs  runtime.rs  state.rs
crates/reson/src/player/playback/: lazy_sources.rs  looping_samples.rs  retarget_progress_tests.rs  span.rs  span_edge_fade.rs  span_samples.rs  test_support.rs
crates/reson/src/player/playback/lazy_sources/: decoder_source.rs  f32_cursor.rs  f32_file.rs  mod.rs  pcm_wav_cursor.rs  pcm_wav_file.rs  repeating_source.rs  span_source.rs
crates/reson/src/recording/: capture.rs  health.rs  mod.rs  monitor.rs  writer.rs
crates/reson/src/source/: accounting.rs  mod.rs  output_adapter.rs  samples_buffer.rs
crates/reson/src/tests/: decode.rs  fade.rs  mod.rs  player.rs  playhead_edges.rs  routing.rs  support.rs
crates/reson/src/wav_sanitize/: riff.rs  tests.rs
crates/reson/src/wav_sanitize/riff/: tests.rs
crates/sempal-analysis/: Cargo.toml
crates/sempal-analysis/src/: app_dirs.rs  lib.rs
crates/sempal-analysis/src/analysis/: features.rs  fft.rs  similarity.rs  time_domain.rs  vector.rs  version.rs
crates/sempal-analysis/src/analysis/ann_index/: state.rs  storage.rs  update.rs
crates/sempal-analysis/src/analysis/ann_index/container/: codec.rs  stream_io.rs
crates/sempal-analysis/src/analysis/ann_index_tests/: query.rs  storage.rs  updates.rs
crates/sempal-analysis/src/analysis/audio/: analysis_prep.rs  decode.rs  decode_io.rs  resample.rs  silence.rs
crates/sempal-analysis/src/analysis/audio/exact_duplicates/: matching.rs  tests.rs  windows.rs
crates/sempal-analysis/src/analysis/audio/normalize/: dispatch.rs  mod.rs  tests.rs  x86.rs
crates/sempal-analysis/src/analysis/frequency_domain/: mel.rs  stats.rs
crates/sempal-analysis/src/analysis/frequency_domain/stft/: frames.rs  mod.rs  spectral.rs
crates/sempal-analysis/src/analysis/hdbscan/: engine.rs  mapping.rs  mod.rs
crates/sempal-analysis/src/analysis/umap/: mod.rs  projection.rs  storage.rs
crates/sempal-library/: Cargo.toml
crates/sempal-library/src/: app_dirs.rs  diagnostics.rs  env_flags.rs  lib.rs  sqlite_ext.rs  sqlite_wal.rs
crates/sempal-library/src/sample_sources/: audio_support.rs  library.rs  mod.rs
crates/sempal-library/src/sample_sources/db/: mod.rs  pending_renames.rs  tags.rs  telemetry.rs  util.rs  write.rs
crates/sempal-library/src/sample_sources/db/file_ops_journal/: entry.rs  mod.rs  reconcile.rs  store.rs  tests.rs
crates/sempal-library/src/sample_sources/db/read/: bpm_queries.rs  decode.rs  file_queries.rs  metadata_queries.rs  tests.rs
crates/sempal-library/src/sample_sources/db/schema/: ddl.rs  migrations.rs  mod.rs
crates/sempal-library/src/sample_sources/db/write/: mutation.rs  tests.rs
crates/wavecrate-library/: Cargo.toml
crates/wavecrate-library/src/: app_dirs.rs  diagnostics.rs  filesystem_identity.rs  lib.rs  sqlite_ext.rs  sqlite_wal.rs  test_runtime.rs
crates/wavecrate-library/src/app_dirs/: error.rs  overrides.rs  paths.rs  profile.rs  resolution.rs  state.rs  storage_usage.rs  tests.rs
crates/wavecrate-library/src/sample_sources/: audio_support.rs  library.rs  mod.rs  source_entry.rs
crates/wavecrate-library/src/sample_sources/db/: content_audit.rs  error.rs  index_entries.rs  mod.rs  open.rs  open_profiles.rs  pending_renames.rs  read.rs  rename_destinations.rs  rename_metadata.rs  role_contract_tests.rs  tags.rs  telemetry.rs  types.rs  util.rs  write.rs
crates/wavecrate-library/src/sample_sources/db/file_ops_journal/: decode.rs  entry.rs  mod.rs  reconcile.rs  recovery_io.rs  store.rs  tests.rs
crates/wavecrate-library/src/sample_sources/db/open/: paths.rs  read_only.rs
crates/wavecrate-library/src/sample_sources/db/read/: decode.rs  file_queries.rs  metadata_queries.rs  tests.rs
crates/wavecrate-library/src/sample_sources/db/schema/: ddl.rs  migrations.rs  mod.rs
crates/wavecrate-library/src/sample_sources/db/tags/: identity.rs  mutations.rs  queries.rs  tests.rs
crates/wavecrate-library/src/sample_sources/db/write/: batch.rs  collections.rs  (+9 more)
crates/wavecrate-library/src/sample_sources/readiness/: mod.rs  model.rs  snapshot.rs  store.rs
crates/wavecrate-library/src/sqlite_ext/: loader.rs  policy.rs
crates/wavecrate-library/tests/: readiness_lease_process.rs
crates/wavecrate-scan/: Cargo.toml
crates/wavecrate-scan/src/: lib.rs
crates/wavecrate-scan/src/sample_sources/: mod.rs
crates/wavecrate-scan/src/sample_sources/scanner/: manifest.rs  mod.rs  scan_capability.rs  scan_db_sync.rs  scan_diff.rs  scan_diff_phase.rs  scan_fs.rs  scan_hash.rs  scan_index.rs  scan_paths.rs  scan_walk.rs  scan_writer.rs
tools/bench-cli/: Cargo.toml
tools/bench-cli/src/: main.rs
tools/bench-cli/src/bench/: analysis_throughput.rs  feature_blob_decode.rs  gui.rs  gui_tests.rs  options.rs  report.rs  similarity_latency.rs  stats.rs
tools/bench-cli/src/bench/gui/: attribution.rs  interactions.rs  rebuild_probe.rs  report.rs  scenario_registry.rs  segment_probe.rs  workspace.rs
tools/bench-cli/src/bench/stats/: staged.rs
(+3630 files in other folders)
