[package]
name = "sempal"
version = "19.0.0"
edition = "2024"
default-run = "sempal"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[features]
default = []
native-bridge-metrics = []
sqlite-ext-unsafe = []

[dependencies]
hound = "3.5.1"
cpal = "0.17.1"
ringbuf = "0.4"
sysinfo = "0.37.2"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3.3"
toml = "0.8.19"
thiserror = "2.0.17"
regex = "1.12.2"
directories = "6.0.0"
rfd = "0.16.0"
winit = "0.30.12"
pollster = "0.4.0"
vello = "0.7.0"
skrifa = "0.40.0"
radiant = { path = "vendor/radiant" }
open = "5.3.3"
image = "0.25.9"
raw-window-handle = "0.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2.4"
notify = "6.1.1"
time = { version = "0.3.44", features = [
    "formatting",
    "macros",
    "local-offset",
] }
fuzzy-matcher = "0.3.7"
rand = "0.9.2"
rand_08 = { package = "rand", version = "0.8.5" }
ordered-float = "3.2.0"
semver = "1.0.27"
sha2 = "0.10.9"
blake3 = "1.6.1"
tempfile = "3.23.0"
ureq = { version = "2.12.1", features = ["json", "tls"] }
url = "2.5.4"
zip = { version = "2.2.1", default-features = false, features = ["deflate"] }
keyring = "3.6.2"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
ndarray = "=0.16.1"
linfa = "0.8.0"
linfa-reduction = "0.8.0"
linfa-tsne = "0.8.0"
sprs = "=0.11.2"
hnsw_rs = "0.3.3"
symphonia = { version = "0.5.4", features = ["wav", "pcm", "mp3", "flac"] }
hdbscan = "0.12.0"
rustfft = "6.2.0"
rayon = "1.10"
crossbeam-queue = "0.3.12"


[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(not(target_os = "macos"))'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.17.1", features = ["asio"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-implement = "0.60.2"
windows-core = "0.62.2"
winreg = "0.52.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.176"

[dev-dependencies]
criterion = "0.8.1"

[build-dependencies]
embed-resource = "3.0"

[[bench]]
name = "tagging"
harness = false

[[bench]]
name = "ann_index"
harness = false
