[package]
name = "reson"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.1"
hound = "3.5.1"
ringbuf = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["wav", "pcm", "mp3", "flac"] }
thiserror = "2.0.17"
tracing = "0.1.41"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.17.1", features = ["asio"] }

[dev-dependencies]
serde_json = "1.0.145"
tempfile = "3.23.0"
