[package]
name = "sempal-analysis"
version = "19.0.0"
edition = "2024"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[dependencies]
blake3 = "1.6.1"
directories = "6.0.0"
hdbscan = "0.12.0"
hnsw_rs = "0.3.3"
hound = "3.5.1"
linfa = "0.8.0"
linfa-reduction = "0.8.0"
linfa-tsne = "0.8.0"
ndarray = "=0.16.1"
rand_08 = { package = "rand", version = "0.8.5", features = ["small_rng"] }
rayon = "1.10"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension"] }
rustfft = "6.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
symphonia = { version = "0.5.4", features = ["wav", "pcm", "mp3", "flac"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
