[package]
name = "sempal-library"
version = "19.0.0"
edition = "2024"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[features]
default = []
sqlite-ext-unsafe = []

[dependencies]
directories = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.8.19"
tracing = "0.1.41"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }
