[package]
name = "sempal-bench-cli"
version = "19.0.0"
edition = "2024"

[[bin]]
name = "sempal-bench"
path = "src/main.rs"

[dependencies]
hound = "3.5.1"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension"] }
sempal = { path = "../.." }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
