[package]
name = "wavecrate-bench-cli"
version = "19.0.2"
edition = "2024"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[[bin]]
name = "wavecrate-bench"
path = "src/main.rs"

[dependencies]
hound = "3.5.1"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension"] }
wavecrate = { path = "../.." }
wavecrate-analysis = { path = "../../crates/wavecrate-analysis" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tempfile = "3.23.0"
